--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -13,12 +13,15 @@ body {
   color: #FFF;
   height: 64px;
 }
+
 .header-item a {
   text-decoration: none;
   color: inherit;
 }
 
-.dropdown-about, .header-item, .header-item a {
+.dropdown-about,
+.header-item,
+.header-item a {
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
@@ -27,22 +30,23 @@ body {
   letter-spacing: 0.2rem;
 }
 
-.header-item:hover, .header-item a:hover {
+.header-item:hover,
+.header-item a:hover {
   cursor: pointer;
   color: var(--ei-title);
 }
 
 .ei-border-bracket {
   background: url("../img/border-line-vertical.png") left top no-repeat,
-              url("../img/border-line-horizontal.png") center top no-repeat,
-              url("../img/border-line-vertical.png") right top no-repeat,
-              url("../img/border-line-vertical.png") left bottom no-repeat,
-              url("../img/border-line-horizontal.png") center bottom no-repeat,
-              url("../img/border-line-vertical.png") right bottom no-repeat;
+    url("../img/border-line-horizontal.png") center top no-repeat,
+    url("../img/border-line-vertical.png") right top no-repeat,
+    url("../img/border-line-vertical.png") left bottom no-repeat,
+    url("../img/border-line-horizontal.png") center bottom no-repeat,
+    url("../img/border-line-vertical.png") right bottom no-repeat;
   background-size: 7px 40px, 100% 7px, 7px 40px,
-                   7px 40px, 100% 7px, 7px 40px;
+    7px 40px, 100% 7px, 7px 40px;
   background-origin: border-box, border-box, border-box,
-                     border-box, border-box, border-box;
+    border-box, border-box, border-box;
   padding: 20px;
 }
 
@@ -137,7 +141,7 @@ body {
 /* Links inside the dropdown */
 .dropdown-content a {
   font-size: 14px;
-  color: #FFF;
+  color: #000;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -174,16 +178,19 @@ body {
   color: var(--bs-gray-500);
   font-weight: 300;
 }
+
 :-moz-placeholder {
   font-style: italic;
   color: var(--bs-gray-500);
   font-weight: 300;
 }
+
 ::-moz-placeholder {
   font-style: italic;
   color: var(--bs-gray-500);
   font-weight: 300;
 }
+
 :-ms-input-placeholder {
   font-style: italic;
   color: var(--bs-gray-500);
@@ -295,7 +302,8 @@ input[type="text"]:focus {
 
 .parameter-value text {
   fill: var(--ei-400);
-  font-size: 12px;;
+  font-size: 12px;
+  ;
 }
 
 .outputs {
@@ -347,9 +355,12 @@ input[type="text"]:focus {
   border-left: 3px solid var(--ei-200);
   font-weight: 600;
 }
+
 /* CHART ICONS */
 
-#select-chart, #chart-types, #filters-col {
+#select-chart,
+#chart-types,
+#filters-col {
   line-height: 54px;
   display: inline-block;
   margin-right: 12px;
@@ -449,7 +460,7 @@ input[type="text"]:focus {
   text-align: center;
 }
 
-.legend-header{
+.legend-header {
   font-size: 16px;
   font-weight: 500;
 }
@@ -544,7 +555,8 @@ input[type="text"]:focus {
 }
 
 
-.graph-menu, .groupby-menu {
+.graph-menu,
+.groupby-menu {
   line-height: 26px;
 }
 
@@ -566,6 +578,7 @@ input[type=checkbox] {
   cursor: pointer;
   margin-right: 12px;
 }
+
 input[type=checkbox]:before {
   content: "";
   display: block;
@@ -578,6 +591,7 @@ input[type=checkbox]:before {
   border-radius: 2px;
   background-color: var(--ei-100);
 }
+
 input[type=checkbox]:checked:after {
   content: "";
   display: block;
@@ -680,7 +694,8 @@ label {
   line-height: 42px;
 }
 
-.cia-number, .cia-est {
+.cia-number,
+.cia-est {
   display: inline-block;
   width: auto;
   vertical-align: baseline;
@@ -747,7 +762,8 @@ label {
   font-size: 18px;
 }
 
-.graph-menu-detail, .groupby-menu-detail {
+.graph-menu-detail,
+.groupby-menu-detail {
   position: relative;
   display: inline-block;
   text-align: center;
@@ -762,20 +778,23 @@ label {
   margin-left: 10px;
 }
 
-.graph-menu-detail:before, .groupby-menu-detail:before {
-  content:'?';
+.graph-menu-detail:before,
+.groupby-menu-detail:before {
+  content: '?';
   font-weight: 400;
-  color:var(--ei-title);
+  color: var(--ei-title);
 }
 
-.graph-menu-detail:hover p, .groupby-menu-detail:hover p {
+.graph-menu-detail:hover p,
+.groupby-menu-detail:hover p {
   display: block;
   transform-origin: 100% 100%;
   -webkit-animation: fadeIn 0.3s ease-in-out;
   animation: fadeIn 0.3s ease-in-out;
 }
 
-.graph-menu-detail p, .groupby-menu-detail p {
+.graph-menu-detail p,
+.groupby-menu-detail p {
   display: none;
   text-align: left;
   background-color: var(--ei-background);
@@ -790,7 +809,7 @@ label {
   z-index: 100;
 }
 
-@media (max-width:  1040px) {
+@media (max-width: 1040px) {
   body {
     max-width: 100vw;
   }
