--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -838,13 +838,19 @@ label {
 
 /* Dash app */
 
-.Select-value, .dash-dropdown .Select-control, .dash-dropdown .Select-control .Select-input input, .nav-link {
+.Select-value, .dash-dropdown .Select-control, .dash-dropdown .Select-control .Select-input input,
+.nav-link, .Select-menu-outer *, .VirtualizedSelectOption {
   background-color: var(--ei-background) !important;
 }
 
-.nav-link, .Select-value .Select-value-label, .Select-value-icon {
+.nav-link, .Select-value .Select-value-label, .Select-value-icon, .rc-slider-mark-text, .Select-menu-outer *, VirtualizedSelectOption {
   color: var(--bs-light) !important;
   /* font-family: 'Source Sans Pro', sans-serif;
   font-size: 14px;
   font-weight: 300; */
+}
+
+.VirtualizedSelectOption:hover {
+  color: blue !important;
+  background-color: yellow !important;
 }
