--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -809,6 +809,18 @@ label {
   z-index: 100;
 }
 
+.select-all-container {
+  text-align: end;
+}
+
+.select-all-option, .deselect-all-option {
+  border: none;
+  background: none;
+  font-style: italic;
+  text-decoration: underline;
+  color: darkgray;
+}
+
 @media (max-width: 1040px) {
   body {
     max-width: 100vw;
