improve search box style

--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -818,7 +818,27 @@ label {
   background: none;
   font-style: italic;
   text-decoration: underline;
+  color: var(--bs-gray-500);
+}
+
+.search-box-input {
+  width: 90%;
+  color: var(--bs-gray-500);
+  /* background-color: var(--ei-100); */
+  padding: 4px 8px;
+  border: 1.5px solid var(--bs-gray-500);
+  border-radius: 5px;
+  font-style: italic;
+}
+
+.clear-search {
+  border: none;
+  background: none;
+  /* font-style: italic;
+  text-decoration: underline; */
   color: darkgray;
+  margin-left: -24px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
 @media (max-width: 1040px) {
