--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -473,6 +473,8 @@ input[type="text"]:focus {
   top: -7px;
   right: 41px;
   text-align: left;
+  max-width: 420px;
+  width: 420px;
 }
 
 .share-tooltip .tooltip-inner {
