--- a/podi/assets/css/homepage.css
+++ b/podi/assets/css/homepage.css
@@ -41,12 +41,17 @@ body {
   text-align: center;
   line-height: 64px;
   letter-spacing: 0.2rem;
+  color: var(--bs-light);
+  background-color: var(--ei-background);
+  border: none;
+  padding: 0;
 }
 
 .header-item:hover,
 .header-item a:hover {
   cursor: pointer;
   color: var(--ei-title);
+  background-color: var(--ei-background);
 }
 
 .ei-border-bracket {
@@ -472,14 +477,59 @@ input[type="text"]:focus {
   border: 1px solid var(--ei-200);
 }
 
-.ei-popup {
-  max-width: 450px;
+.tooltip-inner {
   background-color: var(--ei-100);
-  padding: 10px 15px;
-  position: absolute;
+  position: relative;
   pointer-events: none;
-  border: 1px solid var(--ei-200);
+  border: 1px solid var(--ei-350);
+  opacity: 1;
+  overflow: scroll;
+  border-radius: 0;
+  padding: 20px 20px 10px;
+  font-weight: 300;
+}
+
+.about-tooltip .tooltip-inner {
+  top: -7px;
+  right: 41px;
+  text-align: left;
+  max-width: 420px;
+  width: 420px;
+}
+
+.share-tooltip .tooltip-inner {
+  top: -7px;
   text-align: center;
+  max-width: 600px;
+  width: 600px;
+}
+
+.tooltip-subtitle {
+  color: var(--ei-title);
+  font-family: 'Josefin Sans', sans-serif;
+  font-weight: 600;
+  text-transform: uppercase;
+  font-size: 14px;
+  margin-bottom: 0.3rem;
+}
+
+.tooltip.show {
+  opacity: 1 !important;
+}
+
+.tooltip-arrow {
+  display: none !important;
+}
+
+#share-url {
+  background-color: var(--ei-background);
+  padding: 10px;
+  border: 1px solid var(--ei-350);
+}
+
+.ei-popup p {
+  background-color: var(--ei-100);
+  opacity: 1;
 }
 
 .legend-header {
